added some transition to header links

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Header Section -->
   <header class="header">
     <div class="container">
-      <div class="logo">SolarCharge</div>
+      <div class="logo">GreenChargeOasis</div>
       <nav class="navbar">
         <ul>
           <li><a href="#home">Home</a></li>
@@ -30,7 +30,7 @@
   <section id="home" class="hero">
     <div class="container">
       <div class="hero-content">
-        <h1>Charge Your Car with Solar Power</h1>
+        <h1>Charge Your Cars with Solar Power</h1>
         <p>Sustainable, Efficient, and Future-Ready</p>
         <a href="#products" class="cta-button">Browse Products</a>
       </div>
