--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
       <h2>Why Choose Solar Car Charging Ports?</h2>
       <div class="features">
         <div class="feature">
-          <img src="eco-icon.png" alt="Eco-Friendly">
+          <img src="images/eco-icon.png" alt="Eco-Friendly">
           <h3>Eco-Friendly</h3>
           <p>Harness renewable energy to charge your car.</p>
         </div>
         <div class="feature">
-          <img src="cost-icon.png" alt="Cost Efficient">
+          <img src="images/cost-icon.png" alt="Cost Efficient">
           <h3>Cost-Efficient</h3>
           <p>Save on electricity bills while helping the planet.</p>
         </div>
         <div class="feature">
-          <img src="easy-icon.png" alt="Easy Installation">
+          <img src="images/easy-icon.png" alt="Easy Installation">
           <h3>Easy Installation</h3>
           <p>Quick and simple setup for home or public locations.</p>
         </div>
@@ -67,28 +67,29 @@
       <h2>How Solar Charging Works for Your Car</h2>
       <div class="steps">
         <div class="step">
-          <img src="solar-panel.png" alt="Solar Panel">
+          <img src="images/solar-panel.png" alt="Solar Panel" width="300px">
           <h3>Step 1: Solar Energy Collection</h3>
           <p>Solar panels collect sunlight and convert it into electricity.</p>
         </div>
         <div class="step">
-          <img src="energy-conversion.png" alt="Energy Conversion">
+          <img src="images/energy-conversion.png" alt="Energy Conversion" width="300px">
           <h3>Step 2: Energy Conversion</h3>
           <p>Energy is converted into usable power for your car.</p>
         </div>
         <div class="step">
-          <img src="charging.png" alt="Charging Car">
+          <img src="images/charging.png" alt="Charging Car" width="300px">
           <h3>Step 3: Charging</h3>
           <p>Power is transferred to the car's battery.</p>
         </div>
         <div class="step">
-          <img src="savings.png" alt="Savings">
+          <img src="images/savings.png" alt="Savings" width="300px">
           <h3>Step 4: Savings</h3>
           <p>Save on electricity costs while reducing your carbon footprint.</p>
         </div>
       </div>
     </div>
   </section>
+  <div class="border"></div>
 
   <!-- Product Showcase Section -->
   <section id="products" class="products">
@@ -96,15 +97,18 @@
       <h2>Our Solar Charging Ports</h2>
       <div class="product-grid">
         <div class="product">
-          <img src="charging-port1.jpg" alt="Charging Port 1">
+          <img class="portimg" src="images/charging-port1.jpg" alt="Charging Port 1" width="700px">
           <h3>Solar Charger Pro</h3>
           <p>Powerful and reliable solar charging solution for your EV.</p>
+          <br>
           <a href="#buy-now" class="cta-button">Buy Now</a>
+          <br></br>
         </div>
         <div class="product">
-          <img src="charging-port2.jpg" alt="Charging Port 2">
+          <img class="portimg" src="images/charging-port2.jpg" alt="Charging Port 2" width="500px">
           <h3>EcoCharge Solar</h3>
           <p>Compact and affordable solar charger for home use.</p>
+          <br>
           <a href="#buy-now" class="cta-button">Buy Now</a>
         </div>
       </div>
