--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
       </div>
     </div>
   </section>
+  <div class="border"></div>
 
   <!-- Testimonials Section -->
   <section id="testimonials" class="testimonials">
@@ -131,14 +132,16 @@
       </div>
     </div>
   </section>
+  <div class="border"></div>
 
   <!-- About Us Section -->
   <section id="about" class="about">
     <div class="container">
       <h2>Our Mission</h2>
-      <p>At SolarCharge, we're dedicated to creating sustainable, innovative solutions for electric vehicle owners. Our mission is to provide reliable solar-powered charging stations that help reduce carbon emissions and lower energy costs.</p>
+      <p>At GreenChargeOasis, we're dedicated to creating sustainable, innovative solutions for electric vehicle owners. Our mission is to provide reliable solar-powered charging stations that help reduce carbon emissions and lower energy costs.</p>
     </div>
   </section>
+  <div class="border"></div>
 
   <!-- Contact Section -->
   <section id="contact" class="contact">
@@ -156,7 +159,7 @@
   <!-- Footer Section -->
   <footer class="footer">
     <div class="container">
-      <p>&copy; 2024 SolarCharge. All rights reserved.</p>
+      <p>&copy; 2024 GreenChargeOasis. All rights reserved.</p>
       <div class="social-links">
         <a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">LinkedIn</a>
       </div>
